# siwe-ex

./: .gitignore  README.md  checksum-Elixir.Siwe.Native.exs  message.txt  mix.exs  signature.txt
.github/workflows/: ci.yml  release.yml
lib/: siwe.ex
lib/siwe/: message.ex  native.ex
native/siwe_ex/: Cargo.toml
native/siwe_ex/src/: lib.rs
native/siwe_native/: Cargo.toml  README.md
native/siwe_native/src/: lib.rs
siwe/: .gitignore  mix.exs
test/: siwe_test.exs
