[package]
name = "siwe_ex"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "siwe_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ethers-core = "0.6.2"
hex = "0.4.3"
http = "0.2.5"
iri-string = { version = "0.4", features = ["serde-std"] }
rand = "0.8.4"
rustler = "0.27.0"
chrono = "0.4"
siwe = "0.3"
