[package]
name = "siwe_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "siwe_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ethers-core = "0.6.2"
hex = "0.4.3"
http = "0.2.5"
iri-string = { version = "0.4", features = ["serde-std"] }
rand = "0.8.4"
rustler = "0.30"
chrono = "0.4"
siwe = "0.3"
